CREATE TABLE CHANNELS (
    CHANNEL_ID NUMBER NOT NULL PRIMARY KEY,
    CHANNEL_DESC VARCHAR2(20) NOT NULL,
    CHANNEL_CLASS VARCHAR2(20) NOT NULL,
    CHANNEL_CLASS_ID NUMBER NOT NULL,
    CHANNEL_TOTAL VARCHAR2(13) NOT NULL,
    CHANNEL_TOTAL_ID NUMBER NOT NULL
);

CREATE TABLE COSTS (
    PROD_ID NUMBER NOT NULL,
    TIME_ID DATE NOT NULL,
    PROMO_ID NUMBER NOT NULL,
    CHANNEL_ID NUMBER NOT NULL,
    UNIT_COST NUMBER(10,2) NOT NULL,
    UNIT_PRICE NUMBER(10,2) NOT NULL
);

CREATE TABLE COUNTRIES (
    COUNTRY_ID NUMBER NOT NULL PRIMARY KEY,
    COUNTRY_ISO_CODE CHAR(2) NOT NULL,
    COUNTRY_NAME VARCHAR2(40) NOT NULL,
    COUNTRY_SUBREGION VARCHAR2(30) NOT NULL,
    COUNTRY_SUBREGION_ID NUMBER NOT NULL,
    COUNTRY_REGION VARCHAR2(20) NOT NULL,
    COUNTRY_REGION_ID NUMBER NOT NULL,
    COUNTRY_TOTAL VARCHAR2(11) NOT NULL,
    COUNTRY_TOTAL_ID NUMBER NOT NULL,
    COUNTRY_NAME_HIST VARCHAR2(40)
);

CREATE TABLE CUSTOMERS (
    CUST_ID NUMBER NOT NULL PRIMARY KEY,
    CUST_FIRST_NAME VARCHAR2(20) NOT NULL,
    CUST_LAST_NAME VARCHAR2(40) NOT NULL,
    CUST_GENDER CHAR(1) NOT NULL,
    CUST_YEAR_OF_BIRTH NUMBER(4,0) NOT NULL,
    CUST_MARITAL_STATUS VARCHAR2(20),
    CUST_STREET_ADDRESS VARCHAR2(40) NOT NULL,
    CUST_POSTAL_CODE VARCHAR2(10) NOT NULL,
    CUST_CITY VARCHAR2(30) NOT NULL,
    CUST_CITY_ID NUMBER NOT NULL,
    CUST_STATE_PROVINCE VARCHAR2(40) NOT NULL,
    CUST_STATE_PROVINCE_ID NUMBER NOT NULL,
    COUNTRY_ID NUMBER NOT NULL,
    CUST_MAIN_PHONE_NUMBER VARCHAR2(25) NOT NULL,
    CUST_INCOME_LEVEL VARCHAR2(30),
    CUST_CREDIT_LIMIT NUMBER,
    CUST_EMAIL VARCHAR2(50),
    CUST_TOTAL VARCHAR2(14) NOT NULL,
    CUST_TOTAL_ID NUMBER NOT NULL,
    CUST_SRC_ID NUMBER,
    CUST_EFF_FROM DATE,
    CUST_EFF_TO DATE,
    CUST_VALID VARCHAR2(1)
);

CREATE TABLE PRODUCTS (
    PROD_ID NUMBER(6,0) NOT NULL PRIMARY KEY,
    PROD_NAME VARCHAR2(50) NOT NULL,
    PROD_DESC VARCHAR2(4000) NOT NULL,
    PROD_SUBCATEGORY VARCHAR2(50) NOT NULL,
    PROD_SUBCATEGORY_ID NUMBER NOT NULL,
    PROD_SUBCATEGORY_DESC VARCHAR2(2000) NOT NULL,
    PROD_CATEGORY VARCHAR2(50) NOT NULL,
    PROD_CATEGORY_ID NUMBER NOT NULL,
    PROD_CATEGORY_DESC VARCHAR2(2000) NOT NULL,
    PROD_WEIGHT_CLASS NUMBER(3,0) NOT NULL,
    PROD_UNIT_OF_MEASURE VARCHAR2(20),
    PROD_PACK_SIZE VARCHAR2(30) NOT NULL,
    SUPPLIER_ID NUMBER(6,0) NOT NULL,
    PROD_STATUS VARCHAR2(20) NOT NULL,
    PROD_LIST_PRICE NUMBER(8,2) NOT NULL,
    PROD_MIN_PRICE NUMBER(8,2) NOT NULL,
    PROD_TOTAL VARCHAR2(13) NOT NULL,
    PROD_TOTAL_ID NUMBER NOT NULL,
    PROD_SRC_ID NUMBER,
    PROD_EFF_FROM DATE,
    PROD_EFF_TO DATE,
    PROD_VALID VARCHAR2(1)
);

CREATE TABLE PROMOTIONS (
    PROMO_ID NUMBER(6,0) NOT NULL PRIMARY KEY,
    PROMO_NAME VARCHAR2(30) NOT NULL,
    PROMO_SUBCATEGORY VARCHAR2(30) NOT NULL,
    PROMO_SUBCATEGORY_ID NUMBER NOT NULL,
    PROMO_CATEGORY VARCHAR2(30) NOT NULL,
    PROMO_CATEGORY_ID NUMBER NOT NULL,
    PROMO_COST NUMBER(10,2) NOT NULL,
    PROMO_BEGIN_DATE DATE NOT NULL,
    PROMO_END_DATE DATE NOT NULL,
    PROMO_TOTAL VARCHAR2(15) NOT NULL,
    PROMO_TOTAL_ID NUMBER NOT NULL
);

CREATE TABLE SALES (
    PROD_ID NUMBER NOT NULL,
    CUST_ID NUMBER NOT NULL,
    TIME_ID DATE NOT NULL,
    CHANNEL_ID NUMBER NOT NULL,
    PROMO_ID NUMBER NOT NULL,
    QUANTITY_SOLD NUMBER(10,2) NOT NULL,
    AMOUNT_SOLD NUMBER(10,2) NOT NULL
);

CREATE TABLE SUPPLEMENTARY_DEMOGRAPHICS (
    CUST_ID NUMBER NOT NULL,
    EDUCATION VARCHAR2(21),
    OCCUPATION VARCHAR2(21),
    HOUSEHOLD_SIZE VARCHAR2(21),
    YRS_RESIDENCE NUMBER,
    AFFINITY_CARD NUMBER(10,0),
    BULK_PACK_DISKETTES NUMBER(10,0),
    FLAT_PANEL_MONITOR NUMBER(10,0),
    HOME_THEATER_PACKAGE NUMBER(10,0),
    BOOKKEEPING_APPLICATION NUMBER(10,0),
    PRINTER_SUPPLIES NUMBER(10,0),
    Y_BOX_GAMES NUMBER(10,0),
    OS_DOC_SET_KANJI NUMBER(10,0),
    COMMENTS VARCHAR2(4000)
);

CREATE TABLE TIMES (
    TIME_ID DATE NOT NULL PRIMARY KEY,
    DAY_NAME VARCHAR2(9) NOT NULL,
    DAY_NUMBER_IN_WEEK NUMBER(1,0) NOT NULL,
    DAY_NUMBER_IN_MONTH NUMBER(2,0) NOT NULL,
    CALENDAR_WEEK_NUMBER NUMBER(2,0) NOT NULL,
    FISCAL_WEEK_NUMBER NUMBER(2,0) NOT NULL,
    WEEK_ENDING_DAY DATE NOT NULL,
    WEEK_ENDING_DAY_ID NUMBER NOT NULL,
    CALENDAR_MONTH_NUMBER NUMBER(2,0) NOT NULL,
    FISCAL_MONTH_NUMBER NUMBER(2,0) NOT NULL,
    CALENDAR_MONTH_DESC VARCHAR2(8) NOT NULL,
    CALENDAR_MONTH_ID NUMBER NOT NULL,
    FISCAL_MONTH_DESC VARCHAR2(8) NOT NULL,
    FISCAL_MONTH_ID NUMBER NOT NULL,
    DAYS_IN_CAL_MONTH NUMBER NOT NULL,
    DAYS_IN_FIS_MONTH NUMBER NOT NULL,
    END_OF_CAL_MONTH DATE NOT NULL,
    END_OF_FIS_MONTH DATE NOT NULL,
    CALENDAR_MONTH_NAME VARCHAR2(9) NOT NULL,
    FISCAL_MONTH_NAME VARCHAR2(9) NOT NULL,
    CALENDAR_QUARTER_DESC CHAR(7) NOT NULL,
    CALENDAR_QUARTER_ID NUMBER NOT NULL,
    FISCAL_QUARTER_DESC CHAR(7) NOT NULL,
    FISCAL_QUARTER_ID NUMBER NOT NULL,
    DAYS_IN_CAL_QUARTER NUMBER NOT NULL,
    DAYS_IN_FIS_QUARTER NUMBER NOT NULL,
    END_OF_CAL_QUARTER DATE NOT NULL,
    END_OF_FIS_QUARTER DATE NOT NULL,
    CALENDAR_QUARTER_NUMBER NUMBER(1,0) NOT NULL,
    FISCAL_QUARTER_NUMBER NUMBER(1,0) NOT NULL,
    CALENDAR_YEAR NUMBER(4,0) NOT NULL,
    CALENDAR_YEAR_ID NUMBER NOT NULL,
    FISCAL_YEAR NUMBER(4,0) NOT NULL,
    FISCAL_YEAR_ID NUMBER NOT NULL,
    DAYS_IN_CAL_YEAR NUMBER NOT NULL,
    DAYS_IN_FIS_YEAR NUMBER NOT NULL,
    END_OF_CAL_YEAR DATE NOT NULL,
    END_OF_FIS_YEAR DATE NOT NULL
    );
