erDiagram
    CHANNELS {
        NUMBER(22) CHANNEL_ID PK
        VARCHAR2(20) CHANNEL_DESC
        VARCHAR2(20) CHANNEL_CLASS
        NUMBER(22) CHANNEL_CLASS_ID
        VARCHAR2(13) CHANNEL_TOTAL
        NUMBER(22) CHANNEL_TOTAL_ID
    }
    COSTS {
        NUMBER(22) PROD_ID
        DATE(7) TIME_ID
        NUMBER(22) PROMO_ID
        NUMBER(22) CHANNEL_ID
        NUMBER(22) UNIT_COST
        NUMBER(22) UNIT_PRICE
    }
    COUNTRIES {
        NUMBER(22) COUNTRY_ID PK
        CHAR(2) COUNTRY_ISO_CODE
        VARCHAR2(40) COUNTRY_NAME
        VARCHAR2(30) COUNTRY_SUBREGION
        NUMBER(22) COUNTRY_SUBREGION_ID
        VARCHAR2(20) COUNTRY_REGION
        NUMBER(22) COUNTRY_REGION_ID
        VARCHAR2(11) COUNTRY_TOTAL
        NUMBER(22) COUNTRY_TOTAL_ID
        VARCHAR2(40) COUNTRY_NAME_HIST NULL
    }
    CUSTOMERS {
        NUMBER(22) CUST_ID PK
        VARCHAR2(20) CUST_FIRST_NAME
        VARCHAR2(40) CUST_LAST_NAME
        CHAR(1) CUST_GENDER
        NUMBER(22) CUST_YEAR_OF_BIRTH
        VARCHAR2(20) CUST_MARITAL_STATUS NULL
        VARCHAR2(40) CUST_STREET_ADDRESS
        VARCHAR2(10) CUST_POSTAL_CODE
        VARCHAR2(30) CUST_CITY
        NUMBER(22) CUST_CITY_ID
        VARCHAR2(40) CUST_STATE_PROVINCE
        NUMBER(22) CUST_STATE_PROVINCE_ID
        NUMBER(22) COUNTRY_ID
        VARCHAR2(25) CUST_MAIN_PHONE_NUMBER
        VARCHAR2(30) CUST_INCOME_LEVEL NULL
        NUMBER(22) CUST_CREDIT_LIMIT NULL
        VARCHAR2(50) CUST_EMAIL NULL
        VARCHAR2(14) CUST_TOTAL
        NUMBER(22) CUST_TOTAL_ID
        NUMBER(22) CUST_SRC_ID NULL
        DATE(7) CUST_EFF_FROM NULL
        DATE(7) CUST_EFF_TO NULL
        VARCHAR2(1) CUST_VALID NULL
    }
    PRODUCTS {
        NUMBER(22) PROD_ID PK
        VARCHAR2(50) PROD_NAME
        VARCHAR2(4000) PROD_DESC
        VARCHAR2(50) PROD_SUBCATEGORY
        NUMBER(22) PROD_SUBCATEGORY_ID
        VARCHAR2(2000) PROD_SUBCATEGORY_DESC
        VARCHAR2(50) PROD_CATEGORY
        NUMBER(22) PROD_CATEGORY_ID
        VARCHAR2(2000) PROD_CATEGORY_DESC
        NUMBER(22) PROD_WEIGHT_CLASS
        VARCHAR2(20) PROD_UNIT_OF_MEASURE NULL
        VARCHAR2(30) PROD_PACK_SIZE
        NUMBER(22) SUPPLIER_ID
        VARCHAR2(20) PROD_STATUS
        NUMBER(22) PROD_LIST_PRICE
        NUMBER(22) PROD_MIN_PRICE
        VARCHAR2(13) PROD_TOTAL
        NUMBER(22) PROD_TOTAL_ID
        NUMBER(22) PROD_SRC_ID NULL
        DATE(7) PROD_EFF_FROM NULL
        DATE(7) PROD_EFF_TO NULL
        VARCHAR2(1) PROD_VALID NULL
    }
    PROMOTIONS {
        NUMBER(22) PROMO_ID PK
        VARCHAR2(30) PROMO_NAME
        VARCHAR2(30) PROMO_SUBCATEGORY
        NUMBER(22) PROMO_SUBCATEGORY_ID
        VARCHAR2(30) PROMO_CATEGORY
        NUMBER(22) PROMO_CATEGORY_ID
        NUMBER(22) PROMO_COST
        DATE(7) PROMO_BEGIN_DATE
        DATE(7) PROMO_END_DATE
        VARCHAR2(15) PROMO_TOTAL
        NUMBER(22) PROMO_TOTAL_ID
    }
    SALES {
        NUMBER(22) PROD_ID
        NUMBER(22) CUST_ID
        DATE(7) TIME_ID
        NUMBER(22) CHANNEL_ID
        NUMBER(22) PROMO_ID
        NUMBER(22) QUANTITY_SOLD
        NUMBER(22) AMOUNT_SOLD
    }
    SUPPLEMENTARY_DEMOGRAPHICS {
        NUMBER(22) CUST_ID PK
        VARCHAR2(21) EDUCATION NULL
        VARCHAR2(21) OCCUPATION NULL
        VARCHAR2(21) HOUSEHOLD_SIZE NULL
        NUMBER(22) YRS_RESIDENCE NULL
        NUMBER(22) AFFINITY_CARD NULL
        NUMBER(22) BULK_PACK_DISKETTES NULL
        NUMBER(22) FLAT_PANEL_MONITOR NULL
        NUMBER(22) HOME_THEATER_PACKAGE NULL
        NUMBER(22) BOOKKEEPING_APPLICATION NULL
        NUMBER(22) PRINTER_SUPPLIES NULL
        NUMBER(22) Y_BOX_GAMES NULL
        NUMBER(22) OS_DOC_SET_KANJI NULL
        VARCHAR2(4000) COMMENTS NULL
    }
    TIMES {
        DATE(7) TIME_ID PK
        VARCHAR2(9) DAY_NAME
        NUMBER(22) DAY_NUMBER_IN_WEEK
        NUMBER(22) DAY_NUMBER_IN_MONTH
        NUMBER(22) CALENDAR_WEEK_NUMBER
        NUMBER(22) FISCAL_WEEK_NUMBER
        DATE(7) WEEK_ENDING_DAY
        NUMBER(22) WEEK_ENDING_DAY_ID
        NUMBER(22) CALENDAR_MONTH_NUMBER
        NUMBER(22) FISCAL_MONTH_NUMBER
        VARCHAR2(8) CALENDAR_MONTH_DESC
        NUMBER(22) CALENDAR_MONTH_ID
        VARCHAR2(8) FISCAL_MONTH_DESC
        NUMBER(22) FISCAL_MONTH_ID
        NUMBER(22) DAYS_IN_CAL_MONTH
        NUMBER(22) DAYS_IN_FIS_MONTH
        DATE(7) END_OF_CAL_MONTH
        DATE(7) END_OF_FIS_MONTH
        VARCHAR2(9) CALENDAR_MONTH_NAME
        VARCHAR2(9) FISCAL_MONTH_NAME
        CHAR(7) CALENDAR_QUARTER_DESC
        NUMBER(22) CALENDAR_QUARTER_ID
        CHAR(7) FISCAL_QUARTER_DESC
        NUMBER(22) FISCAL_QUARTER_ID
        NUMBER(22) DAYS_IN_CAL_QUARTER
        NUMBER(22) DAYS_IN_FIS_QUARTER
        DATE(7) END_OF_CAL_QUARTER
        DATE(7) END_OF_FIS_QUARTER
        NUMBER(22) CALENDAR_QUARTER_NUMBER
        NUMBER(22) FISCAL_QUARTER_NUMBER
        NUMBER(22) CALENDAR_YEAR
        NUMBER(22) CALENDAR_YEAR_ID
        NUMBER(22) FISCAL_YEAR
        NUMBER(22) FISCAL_YEAR_ID
        NUMBER(22) DAYS_IN_CAL_YEAR
        NUMBER(22) DAYS_IN_FIS_YEAR
        DATE(7) END_OF_CAL_YEAR
        DATE(7) END_OF_FIS_YEAR
    }
    CHANNELS ||--o{ COSTS : "CHANNEL_ID references CHANNEL_ID"
    PRODUCTS ||--o{ COSTS : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ COSTS : "PROMO_ID references PROMO_ID"
    TIMES ||--o{ COSTS : "TIME_ID references TIME_ID"
    COUNTRIES ||--o{ CUSTOMERS : "COUNTRY_ID references COUNTRY_ID"
    CHANNELS ||--o{ SALES : "CHANNEL_ID references CHANNEL_ID"
    CUSTOMERS ||--o{ SALES : "CUST_ID references CUST_ID"
    PRODUCTS ||--o{ SALES : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ SALES : "PROMO_ID references PROMO_ID"
    TIMES ||--o{ SALES : "TIME_ID references TIME_ID"
